fix(helpers): show color value when auto-detecting
Add some more improvements like control over what will be shown and when for colors and color palettes. Also improve the behaviour of the heading truncate options (messed up with the previous pull request)

closes #8

--- a/packages/apos-ds/modules/@corllete/apos-ds-page-type/assets/css/preview.css
+++ b/packages/apos-ds/modules/@corllete/apos-ds-page-type/assets/css/preview.css
@@ -637,7 +637,7 @@ a.ds-toggle__trigger:hover {
   height: auto;
 }
 
-.ds-color__value--detect,
+.ds-color__value,
 .ds-color--set {
   text-transform: uppercase;
 } 
